--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <button class="menuToggler">
         <i class="fas fa-compass fa-2x"></i>
       </button>
+      <div class="mask menuToggler"></div>
       <ul class="links">
         <li><a href="#">Components</a></li>
         <li><a href="#">Utilities</a></li>
