One dropdown open at a time

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul class="links">
         <li><a href="#">Components</a></li>
         <li><a href="#">Utilities</a></li>
-        <li class="dropdown">
+        <li class="dropdown entry">
           <span class="dropdown-enter">Dropdown 1</span>
           <ul>
             <li><a href="#">One</a></li>
@@ -31,6 +31,14 @@
               <ul>
                 <li><a href="#">One</a></li>
                 <li><a href="#">Two</a></li>
+                <li class="dropdown">
+                  <span class="dropdown-enter">Nested Dropdown2</span>
+                  <ul>
+                    <li><a href="#">One</a></li>
+                    <li><a href="#">Two</a></li>
+                    <li class="dropdown-back"><span>Back</span></li>
+                  </ul>
+                </li>
                 <li class="dropdown-back"><span>Back</span></li>
               </ul>
             </li>
@@ -38,7 +46,7 @@
             <li class="dropdown-back"><span>Back</span></li>
           </ul>
         </li>
-        <li class="dropdown">
+        <li class="dropdown entry">
           <span class="dropdown-enter">Dropdown 2</span>
           <ul>
             <li><a href="#">Three</a></li>
