Improve docs styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="#">Components</a></li>
         <li><a href="#">Utilities</a></li>
         <li class="dropdown entry">
-          <span class="dropdown-enter">Dropdown 1</span>
+          <span class="dropdown-enter">Dropdown</span>
           <ul>
             <li><a href="#">One</a></li>
             <li><a href="#">Two</a></li>
@@ -32,7 +32,7 @@
                 <li><a href="#">One</a></li>
                 <li><a href="#">Two</a></li>
                 <li class="dropdown">
-                  <span class="dropdown-enter">Nested Dropdown2</span>
+                  <span class="dropdown-enter">Nested Dropdown 2</span>
                   <ul>
                     <li><a href="#">One</a></li>
                     <li><a href="#">Two</a></li>
@@ -58,7 +58,7 @@
       </ul>
     </nav>
     <div class="container">
-      <section id="buttons">
+      <section class="docs" id="buttons">
         <h1 class="heading">Buttons</h1>
         <h2 class="heading-description">Click to copy class names.</h2>
         <div>
