--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modern Prototype</title>
+    <title>Timeless | Prototype your apps without worring about design</title>
     <script
       src="https://kit.fontawesome.com/5db89d435f.js"
       crossorigin="anonymous"
@@ -13,7 +13,7 @@
   <body class="with-navbar">
     <nav class="navbar fixed">
       <div class="logo">
-        <h1>Modern</h1>
+        <h1>Timeless</h1>
       </div>
       <button class="menuToggler">
         <i class="fas fa-compass fa-2x"></i>
